--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,68 @@
 <html>
 <head>
     <title>Tárgygráf++</title>
+    <html lang="hu">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p id="subjects">valami nem jó :(</p>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/zoldplusz.png" width="250" height="55" class="d-inline-block align-top" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item ">
+              <a class="nav-link menu" href="#">TERVEZŐ</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="#">KALKULÁTOR</a>
+            </li>
+          </ul>
+          <div>
+          <form>
+            <div class="form-group row">
+                <div class="col-sm-12 ">
+                      <input type="text" class="d-inline form-control" id="inputUserName" placeholder="Felhasználónév" >
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-12">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Jelszó">
+                </div>
+
+            </div>
+
+          </form>
+        </div>
+        <button type="button" class="submitbutton d-inline">Belépés</button>
+        </div>
+    </nav>
+    <div id="subjects">valami nem jó :( </div>
+
+
+
+
+    <!-- Targygrafpp JS -->
+    <script src="index.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- AJAX -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </body>
 </html>
