Add color effects and diff subjects

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">
             <img src="img/zoldplusz.png" width="250" height="55" class="d-inline-block align-top" alt="logo">
         </a>
@@ -27,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link menu" href="#">TERVEZŐ</a>
+              <a class="nav-link menu" href="#" id="editor">TERVEZŐ</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#">KALKULÁTOR</a>
+              <a class="nav-link" href="#"id="calculator">KALKULÁTOR</a>
             </li>
           </ul>
           <div>
@@ -52,7 +52,7 @@
         <button type="button" class="submitbutton d-inline">Belépés</button>
         </div>
     </nav>
-    <div id="subjects">valami nem jó :( </div>
+    <div id="subjects"></div>
 
 
 
