--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="split right">
         <h1>KALKULÁTOR</h1>
-        <a href="#" class="button">Tovább a kalkulátorhoz...</a>
+        <a href="#" class="button">Tervezés alatt...</a>
       </div>
     </div>
 
